implemented basic register and login pages

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -8,6 +8,13 @@
 <h2>Register</h2>
 
 <form action="/register" method="POST">
+
+    <label for="firstName">First Name:</label>
+    <input type="text" id="firstName" name="firstName" required><br><br>
+
+    <label for="lastName">Last Name:</label>
+    <input type="text" id="lastName" name="lastName" required><br><br>
+
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" required><br><br>
 
