--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,19 +2,14 @@
 <html>
 <head>
     <title>Login</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-<h2>login</h2>
 
 <form action="/login" method="POST">
-    <h1>Log in</h1>
-
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required><br><br>
-
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required><br><br>
-
+    <h2>Sign In</h2>
+    <input type="text" id="username" name="username" required placeholder="Username"><br><br>
+    <input type="password" id="password" name="password" required placeholder="Password"><br><br>
     <button type="submit">Log in</button>
 </form>
 </body>
